--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   border-radius: 0 !important;
 }
 
-.bridge-intro{
+.bridge-intro {
   background-color: #212529;
   color: white;
   padding: 20px;
@@ -49,8 +49,8 @@
 
 .con-img-main {
   width: 100%;
-  height: 80vh;
-  background-image: url('../public/bridge/bridge.jpg');
+  height: 60vh;
+  background-image: url('https://res.cloudinary.com/dpwlgnop6/image/upload/v1728963103/1_xgclku.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -86,10 +86,11 @@
 .title {
   font-size: 1em;
   font-weight: bolder;
-  text-shadow: 5px 5px 10px #212529 !important;
+  text-shadow: 2px 2px 10px #212529 !important;
 }
 
-@media (max-width: 1200px), (max-height: 600px) {
+@media (max-width: 1200px),
+(max-height: 600px) {
   .con-img-main p {
     display: none;
   }
@@ -105,8 +106,11 @@
   text-shadow: none;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: bold;
+  padding: 10px 25px;
+  margin-bottom: 0;
 }
 
 hr {
@@ -203,6 +207,7 @@ input[type="reset"] {
   position: relative;
   padding-bottom: 50px !important;
   height: 100%;
+  padding: 0;
 }
 
 .bnt-form {
@@ -335,7 +340,7 @@ h5 {
   object-fit: cover;
 }
 
-.form-detail {
+.form-detail, .form-FAQ {
   width: 50%;
   height: 60%;
   position: relative;
@@ -344,9 +349,26 @@ h5 {
   display: flex;
   flex-direction: column;
 }
-.form-detail h2 {
-  padding: 10px 25px;
-  margin-bottom: 0;
+
+.form-siteMap{
+  width: 90%;
+  height: 70vh;
+  position: relative;
+  background-color: #212529;
+  color: white;
+  text-align: left;
+  border-radius: 20px !important;
+  margin: 100px 0;
+}
+.body-siteMap {
+  height: calc(100% - 100px);
+  overflow: auto;
+  width: 100%;
+}
+
+.title-siteMap{
+  border-top-left-radius: 20px !important;
+  border-top-right-radius: 20px !important;
 }
 
 .btn-detail {
@@ -354,6 +376,14 @@ h5 {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 9998;
+}
+
+.btn-FAQ {
+  width: 10%;
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: 9999;
 }
 
@@ -362,6 +392,7 @@ h5 {
   overflow-y: auto;
   padding: 0 !important;
 }
+
 
 .list-detail h4 {
   font-weight: bolder;
@@ -458,11 +489,12 @@ h3 {
   margin: 0 auto;
   padding: 10px;
 }
+
 .summary h4 {
   font-weight: bolder;
 }
 
-.footer{
+.footer {
   width: 100%;
   background-color: #212529;
   color: white;
@@ -470,27 +502,32 @@ h3 {
   padding-bottom: 50px;
 }
 
-.inputMail{
+.inputMail {
   width: 80%;
   height: 40px;
   border: none;
   background-color: whitesmoke;
   padding: 10px;
 }
-.inputMail:hover{
+
+.inputMail:hover {
   box-shadow: 0 0 10px whitesmoke;
 }
-.inputMail:focus{
+
+.inputMail:focus {
   box-shadow: 0 0 10px whitesmoke;
   outline: none;
 }
-.btnSub{
+
+.btnSub {
   width: 80%;
 }
-.item-footer{
+
+.item-footer {
   text-align: left;
 }
-.dateTime{
+
+.dateTime {
   width: 100%;
   padding: 0;
   position: fixed;
@@ -500,14 +537,22 @@ h3 {
   background-color: #212529;
   color: white;
   border-top: 1px solid white;
+  z-index: 999;
 }
-.footer .body{
+
+.footer .body {
   display: flex;
   align-items: center;
 }
-.contentFooter{
+
+.contentFooter {
   padding-bottom: 20px;
 }
-.address{
+
+.address {
   padding: 10px 0px;
+}
+
+.logoAptech{
+  width: 40%;
 }
